Adding Remote Layer, ViewModel to MoviesActivity, Database amd show movies on screen

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
-    <!-- Movie theme -->
+    <!-- MovieView theme -->
     <color name="dark_blue">#FF0D253F</color>
     <color name="light_blue">#FF01B4E4</color>
     <color name="light_green">#FF90CEA1</color>
