--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,5 @@
     <dimen name="zero">0dp</dimen>
     <dimen name="image_padding">20dp</dimen>
     <dimen name="card_elevation">3dp</dimen>
+    <dimen name="default_padding">20dp</dimen>
 </resources>
