Adding MovieDetails workflow, update Glide builder, improve dimens and resources

--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -12,14 +12,14 @@
     android:paddingBottom="@dimen/default_padding">
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/cvMovieDetails"
+        android:id="@+id/cvMovie"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="@dimen/card_item_width"
         android:clipChildren="false"
         android:clipToPadding="false"
-        android:elevation="30dp"
+        android:elevation="@dimen/card_elevation"
         app:cardBackgroundColor="@color/dark_blue"
-        app:cardCornerRadius="10dp"
+        app:cardCornerRadius="@dimen/card_corner_radius"
         app:cardPreventCornerOverlap="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -32,28 +32,35 @@
 
             <ImageView
                 android:id="@+id/ivMoviePoster"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="centerCrop"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:srcCompat="@tools:sample/avatars" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/black_alpha" />
 
             <TextView
                 android:id="@+id/tvMovieTitle"
                 android:layout_width="@dimen/zero"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="14dp"
-                android:layout_marginTop="10dp"
-                android:paddingEnd="10dp"
+                android:layout_marginStart="@dimen/default_margin"
+                android:layout_marginEnd="@dimen/default_margin"
+                android:layout_marginBottom="16dp"
+                android:paddingEnd="@dimen/card_item_padding_end"
                 android:singleLine="false"
                 android:textColor="@android:color/white"
-                android:textSize="18sp"
+                android:textSize="@dimen/card_item_description"
                 android:textStyle="bold"
                 app:layout_constrainedWidth="true"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/ivMoviePoster"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:text="Train to Busan sfjsfdkskf skjfdslkdfjskfd" />
+                app:layout_constraintStart_toStartOf="@+id/ivMoviePoster"
+                tools:text="Movie Title" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
