--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -1,89 +1,162 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/clContainerDetails"
+    android:id="@+id/svContentDetails"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black"
     android:orientation="vertical"
+    android:fillViewport="true"
     tools:context=".ui.moviedetails.MovieDetailsActivity">
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cvMovieDetails"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/card_width"
-        android:elevation="@dimen/card_elevation"
-        app:cardCornerRadius="@dimen/zero"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <ImageView
-            android:id="@+id/ivMoviePosterDetail"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scaleType="centerCrop"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:srcCompat="@tools:sample/avatars" />
+            android:layout_height="match_parent">
 
-    </androidx.cardview.widget.CardView>
+            <ProgressBar
+                android:id="@+id/loading"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/tvMovieTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/default_padding"
-        android:textColor="@color/white"
-        android:textSize="@dimen/description"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cvMovieDetails"
-        tools:text="Movie Title" />
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cvMovieDetails"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/card_width"
+                android:elevation="@dimen/card_elevation"
+                app:cardCornerRadius="@dimen/zero"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
 
-    <TextView
-        android:id="@+id/tvMovieGenre"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/text_margin_top"
-        android:textColor="@color/white"
-        app:layout_constraintStart_toStartOf="@+id/tvMovieTitle"
-        app:layout_constraintTop_toTopOf="@+id/tvMovieTitle"
-        tools:text="Drama" />
+                <ImageView
+                    android:id="@+id/ivMoviePosterDetail"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scaleType="centerCrop"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:srcCompat="@tools:sample/avatars" />
 
-    <TextView
-        android:id="@+id/tvMovieTime"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/default_margin"
-        android:textColor="@color/white"
-        app:layout_constraintStart_toEndOf="@+id/tvMovieGenre"
-        app:layout_constraintTop_toTopOf="@+id/tvMovieGenre"
-        tools:text="1h 23m" />
+            </androidx.cardview.widget.CardView>
 
-    <TextView
-        android:id="@+id/tvDescription"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/default_padding"
-        android:layout_marginRight="@dimen/default_padding"
-        android:textColor="@color/white"
-        android:textSize="@dimen/description"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.2"
-        app:layout_constraintStart_toStartOf="@+id/tvMovieGenre"
-        app:layout_constraintTop_toBottomOf="@+id/tvMovieTime"
-        tools:text="Movie Description" />
+            <TextView
+                android:id="@+id/tvMovieTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/default_padding"
+                android:fontFamily="@font/roboto_medium"
+                android:textColor="@color/white"
+                android:textSize="@dimen/title_details"
+                android:textStyle="bold"
+                android:paddingStart="@dimen/default_margin"
+                android:paddingEnd="@dimen/default_margin"
+                app:layout_constraintTop_toBottomOf="@+id/cvMovieDetails"
+                app:layout_constraintLeft_toLeftOf="parent"
+                tools:text="Movie Title" />
 
-    <ProgressBar
-        android:id="@+id/loading"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+            <TextView
+                android:id="@+id/tvDescription"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/default_padding"
+                android:textColor="@color/white"
+                android:textSize="@dimen/description"
+                android:paddingStart="@dimen/default_margin"
+                android:paddingEnd="@dimen/default_margin"
+                android:lineSpacingExtra="@dimen/description_space_line"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:fontFamily="@font/roboto_light"
+                app:layout_constraintTop_toBottomOf="@+id/tvMovieTitle"
+                app:layout_constraintLeft_toLeftOf="parent"
+                tools:text="Movie Description" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+            <TextView
+                android:id="@+id/tvReleaseDate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/default_padding"
+                android:textColor="@color/white"
+                android:textSize="@dimen/description"
+                android:fontFamily="@font/roboto_light"
+                android:paddingStart="@dimen/default_margin"
+                android:textStyle="bold"
+                app:layout_constraintTop_toBottomOf="@+id/tvDescription"
+                app:layout_constraintLeft_toLeftOf="parent"
+                tools:text="Movie Title" />
+
+
+            <TextView
+                android:id="@+id/tvMoviePopularity"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/roboto_light"
+                android:text="@string/popularity"
+                android:textColor="@color/white"
+                android:textStyle="bold"
+                android:layout_marginTop="@dimen/default_padding"
+                android:layout_marginStart="@dimen/default_padding"
+                app:layout_constraintTop_toBottomOf="@+id/tvDescription"
+                app:layout_constraintLeft_toRightOf="@+id/tvReleaseDate"
+                tools:text="Popularity" />
+
+            <TextView
+                android:id="@+id/tvVoteAverage"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/default_padding"
+                android:textColor="@color/white"
+                android:fontFamily="@font/roboto_light"
+                android:textSize="@dimen/description"
+                android:layout_marginStart="@dimen/default_padding"
+                android:textStyle="bold"
+                app:layout_constraintTop_toBottomOf="@+id/tvMoviePopularity"
+                app:layout_constraintLeft_toLeftOf="parent"
+                tools:text="Movie Title" />
+
+            <TextView
+                android:id="@+id/tvMovieGenre"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/text_margin_top"
+                android:fontFamily="@font/roboto_light"
+                android:textColor="@color/white"
+                android:textStyle="bold"
+                app:layout_constraintTop_toBottomOf="@+id/tvVoteAverage"
+                app:layout_constraintLeft_toLeftOf="parent"
+                tools:text="Drama" />
+
+            <TextView
+                android:id="@+id/tvMovieTime"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/default_margin"
+                android:textColor="@color/white"
+                android:fontFamily="@font/roboto_light"
+                app:layout_constraintTop_toBottomOf="@+id/tvMovieGenre"
+                app:layout_constraintLeft_toLeftOf="parent"
+                tools:text="1h 23m" />
+
+            <TextView
+                android:id="@+id/tvMovieHomePage"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/default_padding"
+                android:layout_marginStart="@dimen/default_padding"
+                android:layout_marginEnd="@dimen/default_padding"
+                android:layout_marginBottom="@dimen/default_padding"
+                android:textColor="@color/white"
+                android:textSize="@dimen/description"
+                android:textStyle="bold"
+                android:fontFamily="@font/roboto_light"
+                android:autoLink="web"
+                app:layout_constraintTop_toBottomOf="@+id/tvMovieTime"
+                app:layout_constraintLeft_toLeftOf="parent"
+                tools:text="Movie Home Page" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.core.widget.NestedScrollView>
