--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -122,24 +122,14 @@
                 android:id="@+id/tvMovieGenre"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/text_margin_top"
                 android:fontFamily="@font/roboto_light"
                 android:textColor="@color/white"
+                android:layout_marginStart="@dimen/default_padding"
+                android:layout_marginTop="@dimen/default_padding"
                 android:textStyle="bold"
                 app:layout_constraintTop_toBottomOf="@+id/tvVoteAverage"
                 app:layout_constraintLeft_toLeftOf="parent"
                 tools:text="Drama" />
-
-            <TextView
-                android:id="@+id/tvMovieTime"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/default_margin"
-                android:textColor="@color/white"
-                android:fontFamily="@font/roboto_light"
-                app:layout_constraintTop_toBottomOf="@+id/tvMovieGenre"
-                app:layout_constraintLeft_toLeftOf="parent"
-                tools:text="1h 23m" />
 
             <TextView
                 android:id="@+id/tvMovieHomePage"
@@ -154,7 +144,7 @@
                 android:textStyle="bold"
                 android:fontFamily="@font/roboto_light"
                 android:autoLink="web"
-                app:layout_constraintTop_toBottomOf="@+id/tvMovieTime"
+                app:layout_constraintTop_toBottomOf="@+id/tvMovieGenre"
                 app:layout_constraintLeft_toLeftOf="parent"
                 tools:text="Movie Home Page" />
 
